objects/pymt__PaymentX__c.object
<CustomObject>
    <customHelpPage>pymt__Help</customHelpPage>
    <description>Used to keep track of transaction details in Salesforce.  Supports payment management functionality (refunds, voids) through supported online payment gateways.</description>
    <fields>
        <fullName>evt__Coupon_Code__c</fullName>
        <description>Coupon code used in registering for an event.</description>
        <inlineHelpText>Coupon code used in registering for an event.</inlineHelpText>
        <label>Coupon Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>evt__Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Event</label>
        <referenceTo>evt__Special_Event__c</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pymt__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pymt__Amount__c</fullName>
        <inlineHelpText>Total transaction amount (including tax, shipping and fees)</inlineHelpText>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pymt__Auth_Amount__c</fullName>
        <inlineHelpText>Amount authorized for this transaction.</inlineHelpText>
        <label>Authorization Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pymt__Auth_Expiration__c</fullName>
        <inlineHelpText>Authorization expiration date returned from payment processor.</inlineHelpText>
        <label>Auth Expiration</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pymt__Authorization_Id__c</fullName>
        <inlineHelpText>Authorization ID returned from payment processor.</inlineHelpText>
        <label>Authorization Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pymt__Batch_Id__c</fullName>
        <description>Settlement Id for this payment and other payments in the same batch.</description>
        <inlineHelpText>Settlement Id for this payment and other payments in the same batch.</inlineHelpText>
        <label>Batch Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pymt__Batch_Processing_Action__c</fullName>
        <description>For Scheduled payments.  Type of action to perform when batch processing the scheduled payment.</description>
        <inlineHelpText>For Scheduled payments.  Type of action to perform when batch processing the scheduled payment.</inlineHelpText>
        <label>Batch Processing Action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Process using assigned Payment Method</fullName>
                </value>
                <value>
                    <fullName>Send payment request</fullName>
                </value>
                <value>
                    <fullName>Capture</fullName>
                </value>
                <value>
                    <fullName>Process using default Payment Method on Contact</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pymt__Batch_Processing_Result__c</fullName>
        <description>For Scheduled payments. Displays results after batch processing.</description>
        <inlineHelpText>For Scheduled payments. Displays results after batch processing.</inlineHelpText>
        <label>Batch Processing Result</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pymt__Billing_City__c</fullName>
        <label>Billing City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pymt__Billing_Company__c</fullName>
        <label>Billing Company</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pymt__Billing_Country__c</fullName>
        <label>Billing Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pymt__Billing_Email__c</fullName>
        <label>Billing Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>pymt__Billing_First_Name__c</fullName>
        <label>Billing First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pymt__Billing_Last_Name__c</fullName>
        <label>Billing Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pymt__Billing_Phone__c</fullName>
        <label>Billing Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>pymt__Billing_Postal_Code__c</fullName>
        <label>Billing Postal Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pymt__Billing_State__c</fullName>
        <label>Billing State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pymt__Billing_Street__c</fullName>
        <label>Billing Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>pymt__Card_Type__c</fullName>
        <description>Credit card type</description>
        <inlineHelpText>Credit card type</inlineHelpText>
        <label>Card Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Visa</fullName>
                </value>
                <value>
                    <fullName>MasterCard</fullName>
                </value>
                <value>
                    <fullName>Amex</fullName>
                </value>
                <value>
                    <fullName>Discover</fullName>
                </value>
                <value>
                    <fullName>Maestro</fullName>
                </value>
                <value>
                    <fullName>Solo</fullName>
                </value>
                <value>
                    <fullName>Diners Club</fullName>
                </value>
                <value>
                    <fullName>JCB</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pymt__Category_Split_Expression__c</fullName>
        <description>Optional JSON expression used to determine Category Splits for the payment when it is completed.</description>
        <inlineHelpText>Optional JSON expression used to determine Category Splits for the payment when it is completed.</inlineHelpText>
        <label>Category Split Expression</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pymt__Category_Split_Name__c</fullName>
        <description>This picklist may be edited by the PaymentConnect administrator to add names matching category split settings that have been configured in the PaymentConnect Admin area.</description>
        <inlineHelpText>The name of the category split expression to use when auto-splitting this payment.  Overrides split settings at the processor connection or application level.</inlineHelpText>
        <label>Category Split Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Don&apos;t Auto-Split</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pymt__Category_Split_Total__c</fullName>
        <description>Total amount of category splits for this Payment (excluding uncategorized splits).</description>
        <inlineHelpText>Total amount of category splits for this Payment (excluding uncategorized splits).</inlineHelpText>
        <label>Category Split Total</label>
        <summarizedField>pymt__Category_Split__c.pymt__Amount__c</summarizedField>
        <summaryFilterItems>
            <field>pymt__Category_Split__c.pymt__Assigned_To_Category__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>pymt__Category_Split__c.pymt__Payment__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>pymt__Category_Splits__c</fullName>
        <description>Total number of Category Splits for this Payment.</description>
        <inlineHelpText>Total number of Category Splits for this Payment.</inlineHelpText>
        <label>Category Splits</label>
        <summaryForeignKey>pymt__Category_Split__c.pymt__Payment__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>pymt__Check_Number__c</fullName>
        <label>Check Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pymt__Connection_Error__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Set whenever a connection error occurs between Salesforce and the payment processor.  Check the payment log for details when this flag is set.</inlineHelpText>
        <label>Connection Error</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pymt__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pymt__Currency_ISO_Code__c</fullName>
        <label>Currency ISO Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AUD</fullName>
                </value>
                <value>
                    <fullName>CAD</fullName>
                </value>
                <value>
                    <fullName>CHF</fullName>
                </value>
                <value>
                    <fullName>CZK</fullName>
                </value>
                <value>
                    <fullName>DKK</fullName>
                </value>
                <value>
                    <fullName>EUR</fullName>
                </value>
                <value>
                    <fullName>GBP</fullName>
                </value>
                <value>
                    <fullName>HKD</fullName>
                </value>
                <value>
                    <fullName>HUF</fullName>
                </value>
                <value>
                    <fullName>ILS</fullName>
                </value>
                <value>
                    <fullName>JPY</fullName>
                </value>
                <value>
                    <fullName>MXN</fullName>
                </value>
                <value>
                    <fullName>NOK</fullName>
                </value>
                <value>
                    <fullName>NZD</fullName>
                </value>
                <value>
                    <fullName>PLN</fullName>
                </value>
                <value>
                    <fullName>SEK</fullName>
                </value>
                <value>
                    <fullName>SGD</fullName>
                </value>
                <value>
                    <fullName>USD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pymt__Date__c</fullName>
        <inlineHelpText>Actual date of payment.</inlineHelpText>
        <label>Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pymt__Discount__c</fullName>
        <inlineHelpText>cart item total - discount + tax + shipping = transaction amount</inlineHelpText>
        <label>Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pymt__IP_Address__c</fullName>
        <description>IP Address from which payment originated.</description>
        <inlineHelpText>IP Address from which payment originated.</inlineHelpText>
        <label>IP Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pymt__Invoice_Number__c</fullName>
        <label>Invoice Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pymt__Is_Scheduled__c</fullName>
        <description>Checked when the payment has been scheduled for batch processing or customer payment.</description>
        <formula>(AND(NOT(ISNULL(pymt__Scheduled_Payment_Date__c)), NOT(OR(ISPICKVAL(pymt__Status__c,&apos;Completed&apos;),ISPICKVAL(pymt__Status__c,&apos;Voided&apos;), 
ISPICKVAL(pymt__Status__c,&apos;Reversed&apos;)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Checked when the payment has been scheduled for batch processing or customer payment.</inlineHelpText>
        <label>Is Scheduled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pymt__Is_Test_Transaction__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checked if this is a test transaction.</inlineHelpText>
        <label>Test Transaction</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pymt__Key__c</fullName>
        <description>Payment access key.  Used to limit public access to payment details in Sites.</description>
        <inlineHelpText>Payment access key.  Used to limit public access to payment details in Sites.</inlineHelpText>
        <label>Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pymt__Last_4_Digits__c</fullName>
        <inlineHelpText>Last 4 digits of credit card.</inlineHelpText>
        <label>Last 4 Digits</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pymt__Last_Batch_Processing_Attempt__c</fullName>
        <description>Date batch script last attempt to process this payment.</description>
        <inlineHelpText>Date batch script last attempt to process this payment.</inlineHelpText>
        <label>Last Batch Processing Attempt</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pymt__Last_Response_Status__c</fullName>
        <description>Used to keep track of last response status value.  Allows PaymentConnect to filter out redundant notifications.</description>
        <inlineHelpText>Used to keep track of last response status value.  Allows PaymentConnect to filter out redundant notifications.</inlineHelpText>
        <label>Last Response Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pymt__Latitude__c</fullName>
        <label>Latitude</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pymt__Log__c</fullName>
        <inlineHelpText>Transaction results returned from payment processor and other related information.</inlineHelpText>
        <label>Log</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pymt__Longitude__c</fullName>
        <label>Longitude</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pymt__Map__c</fullName>
        <formula>IMAGE(IF (OR(ISNULL(pymt__Latitude__c),ISNULL(pymt__Longitude__c), pymt__Latitude__c ==0, pymt__Longitude__c == 0),&quot;/s.gif&quot;,&quot;https://maps.googleapis.com/maps/api/staticmap?markers=color:blue|label:P|&quot;&amp;TEXT(pymt__Latitude__c)&amp;&apos;,&apos;&amp;TEXT(pymt__Longitude__c)+&quot;&amp;zoom=13&amp;size=700x200&amp;maptype=roadmap&amp;sensor=false&amp;key=AIzaSyCgIRGM9TXca_nzilQb9QY0F1zJzGcR3Lw&quot;),&quot;Transaction Location&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Map</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pymt__Memo__c</fullName>
        <inlineHelpText>Details about the transaction.</inlineHelpText>
        <label>Memo</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>pymt__Merchant_Custom_Data__c</fullName>
        <inlineHelpText>Custom fields and values passed in with the new payment notification through the PaymentConnect relay handlers.</inlineHelpText>
        <label>Merchant Custom Data</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pymt__OnPaymentCompleted_Trigger__c</fullName>
        <inlineHelpText>Custom action(s) to perform when payment is completed.  Tags must be separated with semi-colons.  Recommended format is alphanumeric, with no spaces or special characters.  E.g. InitiateDropShip;NotifyAccounting;EmailReceipt</inlineHelpText>
        <label>On Payment Completed</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>EmailReceipt</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pymt__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The opportunity record this payment is related to.</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pymt__PO_Number__c</fullName>
        <label>PO Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pymt__Parent_Transaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This look-up field is set for credit card captures and other transactions that have a &apos;parent&apos; transaction or payment record.</inlineHelpText>
        <label>Parent Transaction</label>
        <referenceTo>pymt__PaymentX__c</referenceTo>
        <relationshipLabel>Related Payments</relationshipLabel>
        <relationshipName>Related_Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pymt__Payment_Method__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Stored Payment Method used to process the transaction.</description>
        <inlineHelpText>Stored Payment Method used to process the transaction.</inlineHelpText>
        <label>Payment Method</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>pymt__Payment_Method__c.pymt__Contact__c</field>
                <operation>equals</operation>
                <valueField>$Source.pymt__Contact__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>pymt__Payment_Method__c</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pymt__Payment_Processor__c</fullName>
        <inlineHelpText>The payment processor or merchant account used to process this payment.  This field is set automatically when external payments are received and recorded, and when payments are processed using the Payment Terminal.</inlineHelpText>
        <label>Payment Processor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Authorize.Net</fullName>
                </value>
                <value>
                    <fullName>ACHWorks</fullName>
                </value>
                <value>
                    <fullName>eWay</fullName>
                </value>
                <value>
                    <fullName>PayPal</fullName>
                </value>
                <value>
                    <fullName>Stripe</fullName>
                </value>
                <value>
                    <fullName>WorldPay</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pymt__Payment_Profile__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>For subscription and recurring payments, this field should reference the subscription payment profile.</inlineHelpText>
        <label>Recurring Payment Profile</label>
        <referenceTo>pymt__Payment_Profile__c</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pymt__Payment_Request_Date__c</fullName>
        <description>The date scheduled payment requests should be sent out.  N days before the Scheduled Payment Date, where  N = Processing Action Lead Time, or the record creation date (whichever is later).</description>
        <formula>IF( ISNULL( pymt__Scheduled_Payment_Date__c ) , NULL, IF( DATEVALUE(CreatedDate) &gt;pymt__Scheduled_Payment_Date__c -  NULLVALUE( pymt__Processing_Action_Lead_Time__c  ,0), DATEVALUE(CreatedDate), pymt__Scheduled_Payment_Date__c -  NULLVALUE( pymt__Processing_Action_Lead_Time__c  ,0)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The date scheduled payment requests should be sent out.  N days before the Scheduled Payment Date, where  N = Processing Action Lead Time, or the record creation date (whichever is later).</inlineHelpText>
        <label>Payment Request Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pymt__Payment_Type__c</fullName>
        <label>Payment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>Check or Money Order</fullName>
                </value>
                <value>
                    <fullName>Credit Card</fullName>
                </value>
                <value>
                    <fullName>ECheck</fullName>
                </value>
                <value>
                    <fullName>Electronic Funds Transfer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pymt__Processing_Action_Lead_Time__c</fullName>
        <description>Number of days before the scheduled payment date that the batch processing action (e.g. Send payment request) is to be processed.</description>
        <inlineHelpText>Number of days before the scheduled payment date that the batch processing action (e.g. Send payment request) is to be processed.</inlineHelpText>
        <label>Processing Action Lead Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pymt__Processing_Attempts__c</fullName>
        <description>Number of times the batch processing script has attempted to process this payment.</description>
        <inlineHelpText>Number of times the batch processing script has attempted to process this payment.</inlineHelpText>
        <label>Processing Attempts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pymt__Processor_Connection__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Processor Connection</label>
        <referenceTo>pymt__Processor_Connection__c</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pymt__Reference_Id__c</fullName>
        <description>Used to match API responses and notifications with this payment record.</description>
        <inlineHelpText>Used to match API responses and notifications with this payment record.</inlineHelpText>
        <label>Reference Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pymt__Reschedule__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Setup the next scheduled native subscription payment when this payment is completed.</description>
        <inlineHelpText>Setup the next scheduled native subscription payment when this payment is completed.</inlineHelpText>
        <label>Reschedule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pymt__Scheduled_Payment_Date__c</fullName>
        <inlineHelpText>Scheduled Payment Date is the date on which payment is expected to be paid, and may be used to trigger payment reminders using workflow rules.</inlineHelpText>
        <label>Scheduled Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pymt__Scheduled_Payment_Number__c</fullName>
        <inlineHelpText>Sequence number assigned to scheduled payment</inlineHelpText>
        <label>Scheduled Payment Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pymt__Settlement_Id__c</fullName>
        <label>Settlement Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pymt__Ship_To_City__c</fullName>
        <label>Ship To City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pymt__Ship_To_Company__c</fullName>
        <label>Ship To Company</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pymt__Ship_To_Country__c</fullName>
        <label>Ship To Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pymt__Ship_To_First_Name__c</fullName>
        <label>Ship To First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pymt__Ship_To_Last_Name__c</fullName>
        <label>Ship To Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pymt__Ship_To_Name__c</fullName>
        <label>Ship To Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pymt__Ship_To_Phone__c</fullName>
        <label>Ship To Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>pymt__Ship_To_Postal_Code__c</fullName>
        <label>Ship To Postal Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pymt__Ship_To_State__c</fullName>
        <label>Ship To State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pymt__Ship_To_Street__c</fullName>
        <label>Ship To Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>pymt__Shipping_Calc_Result__c</fullName>
        <description>Result of last triggered shipping calculation attempt. [Success|Error]|[Error Code]|[Message]</description>
        <inlineHelpText>Result of last triggered shipping calculation attempt. [Success|Error]|[Error Code]|[Message]</inlineHelpText>
        <label>Shipping Calc Result</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pymt__Shipping_Method__c</fullName>
        <label>Shipping Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Canada Post</fullName>
                </value>
                <value>
                    <fullName>DHL Global</fullName>
                </value>
                <value>
                    <fullName>DHL US</fullName>
                </value>
                <value>
                    <fullName>FedEx</fullName>
                </value>
                <value>
                    <fullName>ICC World</fullName>
                </value>
                <value>
                    <fullName>LaserShip</fullName>
                </value>
                <value>
                    <fullName>OnTrac</fullName>
                </value>
                <value>
                    <fullName>Standard Shipping</fullName>
                </value>
                <value>
                    <fullName>UPS</fullName>
                </value>
                <value>
                    <fullName>USPS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pymt__Shipping__c</fullName>
        <inlineHelpText>Shipping total for transaction.</inlineHelpText>
        <label>Shipping</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pymt__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Authorized</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>Reversed</fullName>
                </value>
                <value>
                    <fullName>Voided</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pymt__Subscription_Id__c</fullName>
        <inlineHelpText>For recurring or subscription payments, this is the recurring payment profile Id.</inlineHelpText>
        <label>Subscription Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pymt__Tax_Calc_Result__c</fullName>
        <description>Result of last triggered tax calculation attempt. [Success|Error]|[Error Code]|[Message]</description>
        <inlineHelpText>Result of last triggered tax calculation attempt. [Success|Error]|[Error Code]|[Message]</inlineHelpText>
        <label>Tax Calc Result</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pymt__Tax_Method__c</fullName>
        <inlineHelpText>Used with the Trigger Tax Calc checkbox to determine which custom tax calculations to use.</inlineHelpText>
        <label>Tax Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>State/Province Lookup</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pymt__Tax__c</fullName>
        <inlineHelpText>Tax amount on transaction.</inlineHelpText>
        <label>Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pymt__Transaction_Fee__c</fullName>
        <inlineHelpText>Payment processor transaction fee.</inlineHelpText>
        <label>Transaction Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pymt__Transaction_Id__c</fullName>
        <inlineHelpText>Transaction Id returned from payment processor.</inlineHelpText>
        <label>Transaction Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pymt__Transaction_Type__c</fullName>
        <label>Transaction Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Payment</fullName>
                    <default>true</default>
                    <label>Payment</label>
                </value>
                <value>
                    <fullName>Refund</fullName>
                </value>
                <value>
                    <fullName>Authorization</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pymt__Trigger_Payment_Request__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to trigger workflow rules configured to send a payment request email.</description>
        <inlineHelpText>Used to trigger workflow rules configured to send a payment request email.</inlineHelpText>
        <label>Trigger Payment Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pymt__Trigger_Shipping_Calc__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Used to trigger custom shipping calculations for payments with Shopping Cart Items.</inlineHelpText>
        <label>Trigger Shipping Calc</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pymt__Trigger_Tax_Calc__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Used to trigger custom tax calculations for payments with Shopping Cart Items.</inlineHelpText>
        <label>Trigger Tax Calc</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>